editor-components/download/download10/download10.module.scss
@use "../../../../composer-tools/composer-base-components//base//utitilities/viewports.module.scss" as *;

.container {
  &.with-image {
    padding-bottom: 0 !important;
  }

  .max-content {
    .page {
      width: 100%;
      display: flex;
      justify-content: space-between;
      align-items: center;
      gap: var(--composer-gap-md);

      .left-container {
        display: flex;
        flex-direction: column;
        gap: 0;

        &.no-image {
          width: 100%;
        }

        .content-container {
          display: flex;
          flex-direction: column;

          .title,
          .description {
            text-align: left;
            margin-left: 0;
          }

          .subtitle {
            text-align: left;
            margin-left: 0;
            width: fit-content;
          }
        }

        .button-group,
        .stats,
        .down-description {
          justify-content: flex-start;
          align-items: center;
          width: 100%;
        }

        .info {
          text-align: left;
        }

        &.center {
          align-items: center;
          text-align: center;

          .title,
          .description,
          .subtitle {
            text-align: center;
          }

          .subtitle {
            margin-left: auto;
          }

          .button-group {
            justify-content: center;
            align-items: center;
          }

          .stats {
            .stats-title {
              text-align: center;
            }

            .down-description {
              justify-content: center;
              width: auto;

              .info {
                text-align: center;
              }
            }
          }
        }

        .button-group {
          width: 100%;
          display: flex;
          flex-wrap: wrap;
          gap: var(--composer-gap-sm);
          height: auto;

          .button-image {
            width: 170px;
            height: 50px;
            object-fit: cover;
            border-radius: var(--composer-border-radius-sm);
          }

          .button-element {
            .button-icon {
              line-height: 0;
            }

            .button-text {
              content: "";
            }
          }
        }

        .stats {
          display: flex;
          flex-direction: column;

          .stats-title {
            color: var(--composer-font-color-primary);
            text-align: left;
          }

          .down-description {
            display: flex;
            align-items: center;
            gap: var(--composer-gap-sm);

            .stars {
              display: flex;
              align-items: center;
              color: var(--composer-font-color-primary);
              gap: var(--composer-gap-xs);

              .icon {
                width: var(--composer-gap-md);
                height: var(--composer-gap-md);
                display: inline-flex;
                align-items: center;
                justify-content: center;
                color: var(--composer-primary-color);
              }
            }

            .info {
              color: var(--composer-tertiary-color);
            }
          }
        }
      }

      .right-container {
        .right-image {
          width: 600px;
          height: 600px;
          object-fit: cover;
          border-radius: var(--composer-border-radius-sm);
          display: block;
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .page {
        flex-direction: row;
        gap: var(--composer-gap-md);

        .left-container {
          width: 100%;
          gap: 0;

          &.no-image {
            padding-bottom: 0;
          }

          .button-group {
            width: 100%;
            height: auto;
            margin-bottom: var(--composer-gap-sm);
            align-items: stretch;

            .button-image {
              height: 45px;
              width: 150px;
            }
          }
        }

        .right-container {
          width: 100%;
          align-self: stretch;

          .right-image {
            width: 100%;
            height: 100%;
            min-height: 500px;
            object-fit: cover;
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      .page {
        flex-direction: column;
        padding: var(--composer-gap-md) 0 0 0;
        gap: var(--composer-gap-md);

        .left-container {
          width: 100%;
          align-items: flex-start;

          .button-group {
            margin-bottom: var(--composer-gap-sm);

            .button-image {
              width: 120px;
              height: 30px;
            }
          }
        }

        .right-container {
          width: 100%;

          .right-image {
            width: 100%;
            height: 300px;
          }
        }
      }
    }
  }
}

